--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
         </div>
         <div>
             <label for="phone-input" class="icon-label">
-            <img src="/images/phone-fill.svg" alt="">
+            <img src="/images/person_4_24dp_081B29_FILL1_wght400_GRAD0_opsz24.svg" alt="">
             </label>
             <input type="phone" name="phone" id="phone-input" placeholder="06 66 66 66 66">
         </div>
